# libphonebot

./: CMakeLists.txt  JointTrajectoryController.cpp  JointTrajectoryController.hpp  PIDController.cpp  PIDController.hpp  PhonebotKinematics.cpp  PhonebotKinematics.hpp  README.md
cmake/: FindEigen3.cmake
swig/: CMakeLists.txt  PIDController.i  Phonebot.i  PhonebotKinematics.i
tests/: CMakeLists.txt  test_kin.cpp  test_pid.cpp
